--- a/style.css
+++ b/style.css
@@ -2,9 +2,42 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: sans-serif;
 }
 
 header {
     min-height: 100vh;
     background: linear-gradient(240deg, #834d4d, #503d3d);
+    color: white;
+}
+
+.intro-text h1 {
+    font-size: 60px;
+    margin-bottom: 10px;
+}
+.intro-text h3 {
+    font-size: 35px;
+}
+
+.intro-text {
+    top: 50%;
+    left: 20%;
+    transform: translate(-20%, -50%);
+    position: absolute;
+}
+
+.chair {
+    height: 700px;
+    position: absolute;
+    top: 90%;
+    right: 10%;
+    transform: translate(-10%, -90%);
+}
+
+.big-rose {
+    height: 200px;
+}
+
+.big-rose {
+    height: 100px;
 }
